# kiwi_control

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh  package-lock.json  package.json  shrey-junior  tsconfig.base.json  tsconfig.json
.agent/: context-authority.json  project.yaml
.cargo/: config.toml
.claude/: launch.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.playwright-cli/: page-2026-04-10T05-41-32-884Z.yml  page-2026-04-10T10-22-40-407Z.yml  page-2026-04-10T10-25-01-539Z.yml  page-2026-04-10T10-25-04-365Z.yml  page-2026-04-10T10-25-07-871Z.yml  page-2026-04-10T10-25-12-579Z.yml  page-2026-04-10T10-25-16-458Z.yml  page-2026-04-10T10-25-18-752Z.yml  page-2026-04-10T10-25-21-059Z.yml  page-2026-04-10T10-25-25-644Z.yml  page-2026-04-10T10-25-27-906Z.yml  page-2026-04-10T10-25-30-164Z.yml  page-2026-04-10T10-25-32-470Z.yml  page-2026-04-10T10-27-00-911Z.yml  page-2026-04-10T10-27-03-476Z.yml  page-2026-04-10T10-29-18-865Z.yml  page-2026-04-10T10-29-20-529Z.yml  page-2026-04-10T10-29-23-243Z.yml  page-2026-04-10T10-30-35-389Z.yml  page-2026-04-10T10-30-37-032Z.yml
apps/sj-ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.snippet.json  tauri.release.conf.json  updater.json
apps/sj-ui/src-tauri/src/: main.rs  state_watch.rs
apps/sj-ui/src-tauri/windows/: hooks.nsh
configs/: global.yaml  guardrails.yaml  (+5 more)
crates/kiwi-runtime/: Cargo.toml
crates/kiwi-runtime/src/: daemon.rs  db.rs  lib.rs  main.rs  models.rs
(+544 files in other folders)
